feat: Реализовать endpoint добавления сотрудника
- добавлена глобальная обработка ошибок
- добавлены проверки на существование паспорта, компании и отдела при добавлении сотрудника

--- a/src/SmartwayTest.Api/Properties/launchSettings.json
+++ b/src/SmartwayTest.Api/Properties/launchSettings.json
@@ -1,23 +1,15 @@
-﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:41829",
-      "sslPort": 0
-    }
-  },
+{
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5163",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "DB_CONNECTION_STRING": "Server=localhost;Port=5432;Database=SmartwayTest;User Id=postgres;Password=postgres;"
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5163"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -26,6 +18,15 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "$schema": "http://json.schemastore.org/launchsettings.json",
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:41829",
+      "sslPort": 0
     }
   }
 }
