feat: Добавить все методы из ТЗ
- реализован метод получения сотрудников по id компании
- реализован метод получения сотрудников по id отдела

--- a/src/SmartwayTest.DataAccess/SmartwayTest.DataAccess.csproj
+++ b/src/SmartwayTest.DataAccess/SmartwayTest.DataAccess.csproj
@@ -30,7 +30,7 @@
     <EmbeddedResource Update="Scripts\Sql.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SQL.Designer.cs</LastGenOutput>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
 
