fix: Изменить докерфайл
- докерфайл перенесён в корневую директорию
- добавлен healthcheck для БД в docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,12 @@ services:
   api:
     build: .
     ports:
-      - "5000:80"
+      - "8080:8080"
     environment:
-      - ConnectionStrings__DefaultConnection=Host=localhost;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
+      - ConnectionStrings__DefaultConnection=Host=db;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
     depends_on:
-      - db
+      db:
+        condition: service_healthy
 
   db:
     image: postgres:latest
@@ -14,6 +15,11 @@ services:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
